1998-12-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (EXTRA_DIST): Set to config.swarm.in,
	Makefile.{common.appl,lib}.in.

1998-11-18  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.common.in (.m.o): Add -Wno-protocol.

1998-10-15  Alex Lancaster  <alex@santafe.edu>

	* Makefile.lib.in, Makefile.appl.in: Make extraction of pathname
	to Makefile.common absolute using swarm_prefix rather than prefix.

1998-10-09  Alex Lancaster  <alex@santafe.edu>

	* config.swarm.in (swarm_includedir): Add to list of extracted
	variables.

	* Makefile.am (install-data-local): Install Makefile.common in
	$(sysconfdir)/swarm.

	* Makefile.lib.in, Makefile.appl.in: Removed all common variables
	to Makefile.common which is now included by both files.

	* Makefile.common.in: Added file.  Contains all variables needed
	for Makefile.appl and Makefile.lib without any of the default
	targets.

1998-10-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* config.swarm.in (xpmlibdir, swarm_XPMLDFLAGS, swarm_XPMLIB):
	New substitutions.
	(swarm_SYSLIBS): Include swarm_XPMLIB.
	(SWARM_LDFLAGS): Include swarm_XPMLDFLAGS.

	* Makefile.appl.in (xpmlibdir, XPMLDFLAGS, XPMLIB): New subsitutions.
	(LDFLAGS): Include XPMLDFLAGS.
	(SYSLIBS): Include XPMLIB.

1998-10-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.appl.in (EXTRALDFLAGS): Add USE_EXTRALDFLAGS as 
	so that Makefile.appl doesn't have to be modified to get no-console
	Window apps.

1998-09-30  Alex Lancaster  <alex@santafe.edu>

	* Makefile.appl.in (swarm_{prefix,exec_prefix,libdir}): Extract
	also to allow SWARMLDFLAGS to be set properly.

1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* config.swarm.in (swarm_SWARMLDFLAGS): Substitute using SWARMLDFLAGS.
	(SWARM_LDFLAGS): Use swarm_SWARMLDFLAGS instead of
	-L${swarm_libdir} @RPATH@${swarm_libdir}.

	* Makefile.appl.in (SWARMLDFLAGS): Substitute.
	(LDFLAGS): Use SWARMLDFLAGS instead of -L$(libdir) and
	@RPATH@$(libdir).
