@@ -1,3 +1,9 @@
+1998-12-17  Marcus G. Daniels  <mgd@chama.santafe.edu>
+
+	* Makefile.common.in (hdf5libdir, HDF5LIB): New substitutions.
+	(LDFLAGS): Add HDF5LDFLAGS.
+	(SYSLIBS): Add HDF5LIB.
+
 1998-12-13  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* Makefile.am (EXTRA_DIST): Set to config.swarm.in,
